try to fix phonegap problem with login

--- a/www/css/login.css
+++ b/www/css/login.css
@@ -176,6 +176,12 @@
     font-size: 10px;
 }
 
+#login_info_txt {
+    color: yellow;
+    text-align: center;
+    font-weight: bolder;
+}
+
 /* active state */
 .login_input  input:focus ~ .highlight {
   -webkit-animation:inputHighlighter 0.3s ease;
